调整一些结构，添加测试